force-app/main/default/objects/Case/fields/AuthNumber__c.field-meta.xml
<CustomField>
    <fullName>AuthNumber__c</fullName>
    <label>Auth Number</label>
    <type>Text</type>
    <length>20</length>
</CustomField>