force-app/main/default/objects/Case/fields/CPTCode__c.field-meta.xml
<CustomField>
    <fullName>CPTCode__c</fullName>
    <label>CPT Code</label>
    <type>Text</type>
    <length>10</length>
</CustomField>