force-app/main/default/objects/Case/fields/FraudClassification__c.field-meta.xml
<CustomField>
    <fullName>FraudClassification__c</fullName>
    <label>Fraud Classification</label>
    <type>Text</type>
    <length>50</length>
</CustomField>