force-app/main/default/objects/Case/fields/FraudFlags__c.field-meta.xml
<CustomField>
    <fullName>FraudFlags__c</fullName>
    <label>Fraud Flags</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>