force-app/main/default/objects/Case/fields/FraudRiskScore__c.field-meta.xml
<CustomField>
    <fullName>FraudRiskScore__c</fullName>
    <label>Fraud Risk Score</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
</CustomField>