force-app/main/default/objects/Case/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <externalId>true</externalId>
    <label>Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>