force-app/main/default/objects/Case/fields/ProviderNPI__c.field-meta.xml
<CustomField>
    <fullName>ProviderNPI__c</fullName>
    <label>Provider NPI</label>
    <type>Text</type>
    <length>10</length>
</CustomField>